src/main/java/com/mattinsler/guiceymongo/data/generator/grammar/GuiceyDataParser.java
// $ANTLR 3.2 Sep 23, 2009 14:05:07 com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g 2010-11-17 12:28:34

package com.lowereast.guiceymongo.data.generator.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class GuiceyDataParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DATA", "TYPE_MAP", "TYPE_SET", "TYPE_LIST", "PARAMETERIZED_TYPE", "TYPE_PRIMITIVE", "PROPERTY", "OPTION", "COMMENT", "PAIR", "ENUM", "ID", "INT", "FLOAT", "STRING", "TYPE", "WS", "EXPONENT", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'{'", "'}'", "'{}'", "','", "'/*'", "'*/'", "'['", "']'", "'('", "')]'", "'='", "'data;'", "';'", "'map<'", "'>'", "'set<'", "'list<'", "'<'"
    };
    public static final int EXPONENT=21;
    public static final int T__29=29;
    public static final int OPTION=11;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int OCTAL_ESC=25;
    public static final int FLOAT=17;
    public static final int TYPE_LIST=7;
    public static final int ID=15;
    public static final int EOF=-1;
    public static final int TYPE_PRIMITIVE=9;
    public static final int TYPE=19;
    public static final int ESC_SEQ=22;
    public static final int TYPE_MAP=5;
    public static final int PAIR=13;
    public static final int COMMENT=12;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int UNICODE_ESC=24;
    public static final int HEX_DIGIT=23;
    public static final int INT=16;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int PARAMETERIZED_TYPE=8;
    public static final int T__33=33;
    public static final int WS=20;
    public static final int T__34=34;
    public static final int ENUM=14;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int PROPERTY=10;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int TYPE_SET=6;
    public static final int DATA=4;
    public static final int STRING=18;

    // delegates
    // delegators


        public GuiceyDataParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GuiceyDataParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GuiceyDataParser.tokenNames; }
    public String getGrammarFileName() { return "com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:31:1: start : ( entry )+ EOF ;
    public final GuiceyDataParser.start_return start() throws RecognitionException {
        GuiceyDataParser.start_return retval = new GuiceyDataParser.start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        GuiceyDataParser.entry_return entry1 = null;


        Object EOF2_tree=null;

        try {
            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:32:2: ( ( entry )+ EOF )
            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:32:4: ( entry )+ EOF
            {
            root_0 = (Object)adaptor.nil();

            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:32:4: ( entry )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case DATA:
                case ENUM:
                case 30:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:0:0: entry
            	    {
            	    pushFollow(FOLLOW_entry_in_start121);
            	    entry1=entry();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, entry1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start124); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class entry_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "entry"
    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:35:1: entry : ( data | enumeration );
    public final GuiceyDataParser.entry_return entry() throws RecognitionException {
        GuiceyDataParser.entry_return retval = new GuiceyDataParser.entry_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GuiceyDataParser.data_return data3 = null;

        GuiceyDataParser.enumeration_return enumeration4 = null;



        try {
            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:36:2: ( data | enumeration )
            int alt2=2;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:36:4: data
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_data_in_entry135);
                    data3=data();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, data3.getTree());

                    }
                    break;
                case 2 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:37:4: enumeration
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_enumeration_in_entry140);
                    enumeration4=enumeration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, enumeration4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "entry"

    public static class data_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "data"
    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:40:1: data : ( ( javadoc )? DATA ID '{' ( data_entry )* '}' -> ^( DATA ID ( javadoc )? ( data_entry )* ) | ( javadoc )? DATA ID '{}' -> ^( DATA ID ( javadoc )? ) );
    public final GuiceyDataParser.data_return data() throws RecognitionException {
        GuiceyDataParser.data_return retval = new GuiceyDataParser.data_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DATA6=null;
        Token ID7=null;
        Token char_literal8=null;
        Token char_literal10=null;
        Token DATA12=null;
        Token ID13=null;
        Token string_literal14=null;
        GuiceyDataParser.javadoc_return javadoc5 = null;

        GuiceyDataParser.data_entry_return data_entry9 = null;

        GuiceyDataParser.javadoc_return javadoc11 = null;


        Object DATA6_tree=null;
        Object ID7_tree=null;
        Object char_literal8_tree=null;
        Object char_literal10_tree=null;
        Object DATA12_tree=null;
        Object ID13_tree=null;
        Object string_literal14_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_DATA=new RewriteRuleTokenStream(adaptor,"token DATA");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleSubtreeStream stream_data_entry=new RewriteRuleSubtreeStream(adaptor,"rule data_entry");
        RewriteRuleSubtreeStream stream_javadoc=new RewriteRuleSubtreeStream(adaptor,"rule javadoc");
        try {
            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:2: ( ( javadoc )? DATA ID '{' ( data_entry )* '}' -> ^( DATA ID ( javadoc )? ( data_entry )* ) | ( javadoc )? DATA ID '{}' -> ^( DATA ID ( javadoc )? ) )
            int alt6=2;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:4: ( javadoc )? DATA ID '{' ( data_entry )* '}'
                    {
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:4: ( javadoc )?
                    int alt3=2;
                    switch ( input.LA(1) ) {
                        case 30:
                            {
                            alt3=1;
                            }
                            break;
                    }

                    switch (alt3) {
                        case 1 :
                            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:0:0: javadoc
                            {
                            pushFollow(FOLLOW_javadoc_in_data151);
                            javadoc5=javadoc();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_javadoc.add(javadoc5.getTree());

                            }
                            break;

                    }

                    DATA6=(Token)match(input,DATA,FOLLOW_DATA_in_data154); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DATA.add(DATA6);

                    ID7=(Token)match(input,ID,FOLLOW_ID_in_data156); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID7);

                    char_literal8=(Token)match(input,26,FOLLOW_26_in_data158); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_26.add(char_literal8);

                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:25: ( data_entry )*
                    loop4:
                    do {
                        int alt4=2;
                        switch ( input.LA(1) ) {
                        case DATA:
                        case ENUM:
                        case ID:
                        case TYPE:
                        case 30:
                        case 32:
                        case 39:
                        case 41:
                        case 42:
                            {
                            alt4=1;
                            }
                            break;

                        }

                        switch (alt4) {
                    	case 1 :
                    	    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:0:0: data_entry
                    	    {
                    	    pushFollow(FOLLOW_data_entry_in_data160);
                    	    data_entry9=data_entry();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_data_entry.add(data_entry9.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    char_literal10=(Token)match(input,27,FOLLOW_27_in_data163); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_27.add(char_literal10);



                    // AST REWRITE
                    // elements: ID, DATA, javadoc, data_entry
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 41:41: -> ^( DATA ID ( javadoc )? ( data_entry )* )
                    {
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:44: ^( DATA ID ( javadoc )? ( data_entry )* )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_DATA.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:54: ( javadoc )?
                        if ( stream_javadoc.hasNext() ) {
                            adaptor.addChild(root_1, stream_javadoc.nextTree());

                        }
                        stream_javadoc.reset();
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:41:63: ( data_entry )*
                        while ( stream_data_entry.hasNext() ) {
                            adaptor.addChild(root_1, stream_data_entry.nextTree());

                        }
                        stream_data_entry.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:42:4: ( javadoc )? DATA ID '{}'
                    {
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:42:4: ( javadoc )?
                    int alt5=2;
                    switch ( input.LA(1) ) {
                        case 30:
                            {
                            alt5=1;
                            }
                            break;
                    }

                    switch (alt5) {
                        case 1 :
                            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:0:0: javadoc
                            {
                            pushFollow(FOLLOW_javadoc_in_data182);
                            javadoc11=javadoc();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_javadoc.add(javadoc11.getTree());

                            }
                            break;

                    }

                    DATA12=(Token)match(input,DATA,FOLLOW_DATA_in_data185); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DATA.add(DATA12);

                    ID13=(Token)match(input,ID,FOLLOW_ID_in_data187); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID13);

                    string_literal14=(Token)match(input,28,FOLLOW_28_in_data189); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_28.add(string_literal14);



                    // AST REWRITE
                    // elements: DATA, ID, javadoc
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 42:26: -> ^( DATA ID ( javadoc )? )
                    {
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:42:29: ^( DATA ID ( javadoc )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_DATA.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:42:39: ( javadoc )?
                        if ( stream_javadoc.hasNext() ) {
                            adaptor.addChild(root_1, stream_javadoc.nextTree());

                        }
                        stream_javadoc.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data"

    public static class enumeration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "enumeration"
    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:45:1: enumeration : ( ( javadoc )? ENUM ID '{}' -> ^( ENUM ID ( javadoc )? ) | ( javadoc )? ENUM ID '{' ( ID ',' )* ID '}' -> ^( ENUM ( ID )+ ( javadoc )? ) );
    public final GuiceyDataParser.enumeration_return enumeration() throws RecognitionException {
        GuiceyDataParser.enumeration_return retval = new GuiceyDataParser.enumeration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ENUM16=null;
        Token ID17=null;
        Token string_literal18=null;
        Token ENUM20=null;
        Token ID21=null;
        Token char_literal22=null;
        Token ID23=null;
        Token char_literal24=null;
        Token ID25=null;
        Token char_literal26=null;
        GuiceyDataParser.javadoc_return javadoc15 = null;

        GuiceyDataParser.javadoc_return javadoc19 = null;


        Object ENUM16_tree=null;
        Object ID17_tree=null;
        Object string_literal18_tree=null;
        Object ENUM20_tree=null;
        Object ID21_tree=null;
        Object char_literal22_tree=null;
        Object ID23_tree=null;
        Object char_literal24_tree=null;
        Object ID25_tree=null;
        Object char_literal26_tree=null;
        RewriteRuleTokenStream stream_ENUM=new RewriteRuleTokenStream(adaptor,"token ENUM");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_javadoc=new RewriteRuleSubtreeStream(adaptor,"rule javadoc");
        try {
            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:46:2: ( ( javadoc )? ENUM ID '{}' -> ^( ENUM ID ( javadoc )? ) | ( javadoc )? ENUM ID '{' ( ID ',' )* ID '}' -> ^( ENUM ( ID )+ ( javadoc )? ) )
            int alt10=2;
            alt10 = dfa10.predict(input);
            switch (alt10) {
                case 1 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:46:4: ( javadoc )? ENUM ID '{}'
                    {
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:46:4: ( javadoc )?
                    int alt7=2;
                    switch ( input.LA(1) ) {
                        case 30:
                            {
                            alt7=1;
                            }
                            break;
                    }

                    switch (alt7) {
                        case 1 :
                            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:0:0: javadoc
                            {
                            pushFollow(FOLLOW_javadoc_in_enumeration211);
                            javadoc15=javadoc();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_javadoc.add(javadoc15.getTree());

                            }
                            break;

                    }

                    ENUM16=(Token)match(input,ENUM,FOLLOW_ENUM_in_enumeration214); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ENUM.add(ENUM16);

                    ID17=(Token)match(input,ID,FOLLOW_ID_in_enumeration216); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID17);

                    string_literal18=(Token)match(input,28,FOLLOW_28_in_enumeration218); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_28.add(string_literal18);



                    // AST REWRITE
                    // elements: javadoc, ENUM, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 46:26: -> ^( ENUM ID ( javadoc )? )
                    {
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:46:29: ^( ENUM ID ( javadoc )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_ENUM.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:46:39: ( javadoc )?
                        if ( stream_javadoc.hasNext() ) {
                            adaptor.addChild(root_1, stream_javadoc.nextTree());

                        }
                        stream_javadoc.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:47:4: ( javadoc )? ENUM ID '{' ( ID ',' )* ID '}'
                    {
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:47:4: ( javadoc )?
                    int alt8=2;
                    switch ( input.LA(1) ) {
                        case 30:
                            {
                            alt8=1;
                            }
                            break;
                    }

                    switch (alt8) {
                        case 1 :
                            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:0:0: javadoc
                            {
                            pushFollow(FOLLOW_javadoc_in_enumeration234);
                            javadoc19=javadoc();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_javadoc.add(javadoc19.getTree());

                            }
                            break;

                    }

                    ENUM20=(Token)match(input,ENUM,FOLLOW_ENUM_in_enumeration237); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ENUM.add(ENUM20);

                    ID21=(Token)match(input,ID,FOLLOW_ID_in_enumeration239); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID21);

                    char_literal22=(Token)match(input,26,FOLLOW_26_in_enumeration241); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_26.add(char_literal22);

                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:47:25: ( ID ',' )*
                    loop9:
                    do {
                        int alt9=2;
                        switch ( input.LA(1) ) {
                        case ID:
                            {
                            switch ( input.LA(2) ) {
                            case 29:
                                {
                                alt9=1;
                                }
                                break;

                            }

                            }
                            break;

                        }

                        switch (alt9) {
                    	case 1 :
                    	    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:47:26: ID ','
                    	    {
                    	    ID23=(Token)match(input,ID,FOLLOW_ID_in_enumeration244); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_ID.add(ID23);

                    	    char_literal24=(Token)match(input,29,FOLLOW_29_in_enumeration246); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_29.add(char_literal24);


                    	    }
                    	    break;

                    	default :
                    	    break loop9;
                        }
                    } while (true);

                    ID25=(Token)match(input,ID,FOLLOW_ID_in_enumeration250); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID25);

                    char_literal26=(Token)match(input,27,FOLLOW_27_in_enumeration252); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_27.add(char_literal26);



                    // AST REWRITE
                    // elements: ID, javadoc, ENUM
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 47:42: -> ^( ENUM ( ID )+ ( javadoc )? )
                    {
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:47:45: ^( ENUM ( ID )+ ( javadoc )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_ENUM.nextNode(), root_1);

                        if ( !(stream_ID.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_ID.hasNext() ) {
                            adaptor.addChild(root_1, stream_ID.nextNode());

                        }
                        stream_ID.reset();
                        // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:47:56: ( javadoc )?
                        if ( stream_javadoc.hasNext() ) {
                            adaptor.addChild(root_1, stream_javadoc.nextTree());

                        }
                        stream_javadoc.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "enumeration"

    public static class data_entry_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "data_entry"
    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:50:1: data_entry : ( entry | ( javadoc )? ( option )* property -> ^( property ( javadoc )? ( option )* ) );
    public final GuiceyDataParser.data_entry_return data_entry() throws RecognitionException {
        GuiceyDataParser.data_entry_return retval = new GuiceyDataParser.data_entry_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GuiceyDataParser.entry_return entry27 = null;

        GuiceyDataParser.javadoc_return javadoc28 = null;

        GuiceyDataParser.option_return option29 = null;

        GuiceyDataParser.property_return property30 = null;


        RewriteRuleSubtreeStream stream_javadoc=new RewriteRuleSubtreeStream(adaptor,"rule javadoc");
        RewriteRuleSubtreeStream stream_property=new RewriteRuleSubtreeStream(adaptor,"rule property");
        RewriteRuleSubtreeStream stream_option=new RewriteRuleSubtreeStream(adaptor,"rule option");
        try {
            // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:51:2: ( entry | ( javadoc )? ( option )* property -> ^( property ( javadoc )? ( option )* ) )
            int alt13=2;
            alt13 = dfa13.predict(input);
            switch (alt13) {
                case 1 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:51:4: entry
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_entry_in_data_entry275);
                    entry27=entry();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, entry27.getTree());

                    }
                    break;
                case 2 :
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:52:4: ( javadoc )? ( option )* property
                    {
                    // com/mattinsler/guiceymongo/data/generator/grammar/GuiceyData.g:52:4: ( javadoc )?
                    int alt11=2;
                    switch ( input.LA(1) ) {
                        case 30:
                            {
                            alt11=1;
                            }
                            break;
                    }
